{
    "name": "InputAction",
    "maps": [
        {
            "name": "HeroControl",
            "id": "35af9e21-b13e-43f2-923f-d6a9cbf9e1c0",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "900f06a5-4b95-419d-b024-022ea9d1c964",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "3d3e55a9-53bc-4f54-997b-a3eddab70527",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseClickRight",
                    "type": "Button",
                    "id": "a8ea7ad2-aaf5-468f-baa7-48dc03af73f5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseClickLeft",
                    "type": "Button",
                    "id": "1b0e2ebc-5778-4066-966e-b50b0719f10f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "26d48081-2220-4fc2-9211-095dfda0c818",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "d0a36e3a-5613-4815-a0bc-a1f6e44d13bf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "96b985a9-f9ab-4b85-9062-7bc4c2ba5e25",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9fa555c7-e970-4e19-abc8-c5f15c12fa22",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba5deef7-a1bf-4f2d-b650-d9f44cb472cc",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": ";KeyBoard",
                    "action": "MouseClickLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b590392-657d-4f4b-849c-0aa1750fdc9e",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "MouseClickLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "cbb1b852-02c3-4904-97eb-51ff71fccf52",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7efe4562-94b6-4309-8db9-54947d321730",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f40e20f4-ac7e-443f-8c76-03dbc22b2fa0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "34d3b2c3-b83e-4af8-9e0a-60622d50636f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "cc09e70e-288f-4986-8915-4170be357bcb",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6392b8e3-6ac9-4bef-b637-e66216824d06",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "251bea57-f146-4b56-83ff-9b6ea4c47a71",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "01c804c9-a0e1-40b2-a38c-2174796f5c4e",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07636ebf-e412-4b9b-a89d-5b847e89278c",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10ee0fa2-2338-4123-a348-4680485903d6",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "672fde40-0143-4989-82d2-1ca38445d458",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "MouseClickRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "aa8887c7-dab1-4512-9ca2-8f21b9f07c76",
            "actions": [
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "d665ca56-7256-4cbf-9bc8-9e1f51f0193c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "View",
                    "type": "Button",
                    "id": "24c1cd18-6426-4c50-b991-84ea24f74d57",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d6f7ccd0-eb41-4d78-808b-143626afd247",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "854c4c57-6ad9-4078-9125-051c3dd45048",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "View",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyBoard",
            "bindingGroup": "KeyBoard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "GamePad",
            "bindingGroup": "GamePad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}